--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-28  Assar Westerlund  <assar@hella.pdc.kth.se>
+
+	* Release 0.1e
+
 Wed Apr 28 00:21:17 1999  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/mcache.c (mcc_get_next): get the current cursor
