--- a/docs/manpages/smbclient.1
+++ b/docs/manpages/smbclient.1
@@ -284,7 +284,7 @@ nothing before or nothing after the percent symbol will cause an empty
 username or an empty password to be used, respectively\&.
 .IP 
 The password may also be specified by setting up an environment
-variable called \f(CWPASSWORD\fP that contains the users password\&. Note
+variable called \f(CWPASSWD\fP that contains the users password\&. Note
 that this may be very insecure on some systems but on others allows
 users to script smbclient commands without having a password appear in
 the command line of a process listing\&.
@@ -294,7 +294,7 @@ on an uppercase password\&. Lowercase or mixed case passwords may be
 rejected by these servers\&.
 .IP 
 Be cautious about including passwords in scripts or in the
-\f(CWPASSWORD\fP environment variable\&. Also, on many systems the command
+\f(CWPASSWD\fP environment variable\&. Also, on many systems the command
 line of a running process may be seen via the \f(CWps\fP command to be
 safe always allow smbclient to prompt for a password and type it in
 directly\&.
@@ -717,7 +717,7 @@ The variable \fBUSER\fP may contain the username of the person using the
 client\&.  This information is used only if the protocol level is high
 enough to support session-level passwords\&.
 .PP 
-The variable \fBPASSWORD\fP may contain the password of the person using
+The variable \fBPASSWD\fP may contain the password of the person using
 the client\&.  This information is used only if the protocol level is
 high enough to support session-level passwords\&.
 .PP 
