*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6137 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kadmin/ChangeLog
+++ b/kadmin/ChangeLog
@@ -1,5 +1,10 @@
 1999-05-04  Assar Westerlund  <assar@sics.se>
 
+	* version4.c (kadm_ser_cpw): always allow a user to change her
+ 	password
+	(kadm_ser_*): make logging work
+	clean-up and restructure
+	
 	* kadmin_locl.h (set_entry): add prototype
 
 	* kadmin.c (usage): update usage string
