--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in release 0.1f;
+
+ * experimental support for v4 kadmin protokoll in kadmind
+
 Changes in release 0.1e:
 
  * try to handle old DCE and MIT kdcs
