--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,5 +1,8 @@
 1999-05-04  Assar Westerlund  <assar@sics.se>
 
+	* set_keys.c (_kadm5_set_keys2): don't check the recently created
+ 	memory for NULL pointers
+
 	* private.h (_kadm5_setup_entry): change prototype
 
 	* modify_s.c: call new _kadm5_setup_entry
