*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6138 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-04  Assar Westerlund  <assar@sics.se>
+
+	* configure.in: bump version to 0.1f
+
 1999-05-03  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/get_cred.c (get_cred_from_kdc_flags): allocate and free
