--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-05  Johan Danielsson  <joda@pdc.kth.se>
+
+	* send_recv.c: cleanup _kadm5_client_{send,recv}
+
 1999-05-04  Assar Westerlund  <assar@sics.se>
 
 	* set_keys.c (_kadm5_set_keys2): don't check the recently created
