--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -41,6 +41,8 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @email{itojun@@kame.net}
 @item Daniel Kouril
 @email{kouril@@informatics.muni.cz}
+@item Åke Sandgren 
+@email{ake@@cs.umu.se}
 @item and we hope that those not mentioned here will forgive us.
 @end table
 
