--- a/kadmin/ChangeLog
+++ b/kadmin/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-07  Assar Westerlund  <assar@sics.se>
+
+	* ank.c (add_new_key): initialize more variables
+
 1999-05-04  Assar Westerlund  <assar@sics.se>
 
 	* version4.c (kadm_ser_cpw): always allow a user to change her
