*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6172 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-09  Assar Westerlund  <assar@sics.se>
+
+	* login.c (krb5_verify): check seteuid for errors
+	
 Mon Apr 19 22:30:55 1999  Assar Westerlund  <assar@sics.se>
 
 	* login.c: conditionalize the kafs calls on KRB4
