--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-05-09  Assar Westerlund  <assar@sics.se>
+
+	* kuser/kinit.c: add --noaddresses
+	
+	* lib/krb5/get_in_tkt.c (init_as_req): interpret `addrs' being an
+	empty sit of list as to not ask for any addresses.
+	
 1999-05-08  Assar Westerlund  <assar@sics.se>
 
 	* acconfig.h (_GNU_SOURCE): define this to enable (used)
