*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6189 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in release 0.1g:
+
+ * krb5-aware kx
+ * bug fixes
+
 Changes in release 0.1f;
 
  * experimental support for v4 kadmin protokoll in kadmind
