*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6199 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-10  Assar Westerlund  <assar@sics.se>
+
+	* pop_debug.c (doit_v5): call krb5_sendauth with ccache == NULL
+	
 1999-04-11  Assar Westerlund  <assar@sics.se>
 
 	* pop_debug.c (main): use print_version
