--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,5 +1,9 @@
 1999-05-10  Assar Westerlund  <assar@sics.se>
 
+	* Makefile.in (SOURCES*): update sources list
+	
+	* kx.c (main): forgot to conditionalize some KRB5 code
+	
 	* kxd.c (main): use getarg
 	(*): handle v4 and/or v5
 
