*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6208 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/su/ChangeLog
+++ b/appl/su/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-11  Assar Westerlund  <assar@sics.se>
+
+	* su.c (verfiy_krb5): get the name out of the ccache before
+ 	closing it
+
 Wed Apr 21 21:04:36 1999  Assar Westerlund  <assar@sics.se>
 
 	* su.c (-f): implement
