--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-11  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c (main): add fallback to rlogin
+
 1999-05-10  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c (send_krb5_auth): call krb5_sendauth with ccache == NULL.
