--- a/kuser/kgetcred.1
+++ b/kuser/kgetcred.1
@@ -17,11 +17,11 @@ get a ticket for a particular service
 .Ar service
 .Sh DESCRIPTION
 .Nm
+obtains a ticket for a service.
 Usually tickets for services are obtained automatically when needed
 but sometimes for some odd reason you want to obtain a particular
-ticket or of a special type.  This is what
-.Nm
-does.
+ticket or of a special type.
+.Pp
 Supported options:
 .Bl -tag -width Ds
 .It Xo
