*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6229 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+1999-05-14  Assar Westerlund  <assar@sics.se>
+
+	* kdc/hpropd.c: support for dumping to krb4.  From Miroslav Ruda
+ 	<ruda@ics.muni.cz>
+
+	* admin/ktutil.c (kt_add): new option `--no-salt'.  From Miroslav
+ 	Ruda <ruda@ics.muni.cz>
+
+	* configure.in: add cygwin and DOS tests replace sendmsg, recvmsg,
+ 	and innetgr with roken versions
+
+	* kuser/kgetcred.c: new program
+
 Tue May 11 14:09:33 1999  Johan Danielsson  <joda@pdc.kth.se>
 
 	* lib/krb5/mcache.c: fix paste-o
