--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-11  Assar Westerlund  <assar@sics.se>
+
+	* push.c (do_v5): remove unused and non-working code
+
 1999-05-10  Assar Westerlund  <assar@sics.se>
 
 	* push.c (do_v5): call krb5_sendauth with ccache == NULL
