--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-14  Assar Westerlund  <assar@sics.se>
+
+	* rshd.c (doit): afslog correctly
+
 1999-05-11  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c (main): add fallback to rlogin
