*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6238 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Changes in release 0.1g:
 
+ * kgetcred: new program for explicitly obtaining tickets
+ * configure fixes
  * krb5-aware kx
  * bug fixes
 
