*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6241 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-05-14  Assar Westerlund  <assar@sics.se>
 
+	* admin/ktutil.c (kt_remove): -t should be -e
+
 	* kdc/hpropd.c: support for dumping to krb4.  From Miroslav Ruda
  	<ruda@ics.muni.cz>
 
