--- a/kuser/klist.1
+++ b/kuser/klist.1
@@ -11,6 +11,8 @@ list the current tickets
 .Nm
 .Op Fl t | Fl -test
 .Op Fl v | Fl -verbose
+.Op Fl -version
+.Op Fl -help
 .Sh DESCRIPTION
 .Nm
 reads and displays the current tickets in the crential cache (also
