*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6244 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* admin/ktutil.c (kt_remove): -t should be -e
 
+	* configure.in (CHECK_NETINET_IP_AND_TCP): use
+
 	* kdc/hpropd.c: support for dumping to krb4.  From Miroslav Ruda
  	<ruda@ics.muni.cz>
 
