--- a/docs/manpages/smbsh.1
+++ b/docs/manpages/smbsh.1
@@ -1,4 +1,4 @@
-.TH "smbsh " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBSH 1 "18 May 1999" "smbsh 2.0.4"
 .PP 
 .SH "NAME" 
 smbsh \- Allows access to Windows NT filesystem using UNIX commands
