--- a/docs/manpages/swat.8
+++ b/docs/manpages/swat.8
@@ -1,4 +1,4 @@
-.TH "swat " "8" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SWAT 8 "18 May 1999" "swat 2.0.4"
 .PP 
 .SH "NAME" 
 swat \- Samba Web Administration Tool
