preparing for release of 2.0.4b

--- a/docs/manpages/make_smbcodepage.1
+++ b/docs/manpages/make_smbcodepage.1
@@ -1,4 +1,4 @@
-.TH MAKE_SMBCODEPAGE 1 "18 May 1999" "make_smbcodepage 2.0.4"
+.TH MAKE_SMBCODEPAGE 1 "20 May 1999" "make_smbcodepage 2.0.4b"
 .PP 
 .SH "NAME" 
 make_codepage \- Construct a codepage file for Samba
