--- a/docs/manpages/nmbd.8
+++ b/docs/manpages/nmbd.8
@@ -1,4 +1,4 @@
-.TH NMBD 8 "18 May 1999" "nmbd 2.0.4"
+.TH NMBD 8 "20 May 1999" "nmbd 2.0.4b"
 .PP 
 .SH "NAME" 
 nmbd \- NetBIOS name server to provide NetBIOS over IP
