--- a/docs/manpages/smbpasswd.8
+++ b/docs/manpages/smbpasswd.8
@@ -1,4 +1,4 @@
-.TH SMBPASSWD 8 "18 May 1999" "smbpasswd 2.0.4"
+.TH SMBPASSWD 8 "20 May 1999" "smbpasswd 2.0.4b"
 .PP 
 .SH "NAME" 
 smbpasswd \- change a users SMB password
