--- a/docs/manpages/smbstatus.1
+++ b/docs/manpages/smbstatus.1
@@ -1,4 +1,4 @@
-.TH SMBSTATUS 1 "18 May 1999" "smbstatus 2.0.4"
+.TH SMBSTATUS 1 "20 May 1999" "smbstatus 2.0.4b"
 .PP 
 .SH "NAME" 
 smbstatus \- report on current Samba connections
