--- a/docs/manpages/smbtar.1
+++ b/docs/manpages/smbtar.1
@@ -1,4 +1,4 @@
-.TH SMBTAR 1 "18 May 1999" "smbtar 2.0.4"
+.TH SMBTAR 1 "20 May 1999" "smbtar 2.0.4b"
 .PP 
 .SH "NAME" 
 smbtar \- shell script for backing up SMB/CIFS shares directly to UNIX tape drives
