--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -1,4 +1,4 @@
-.TH TESTPARM 1 "18 May 1999" "testparm 2.0.4"
+.TH TESTPARM 1 "20 May 1999" "testparm 2.0.4b"
 .PP 
 .SH "NAME" 
 testparm \- check an smb\&.conf configuration file for internal correctness
