--- a/docs/manpages/lmhosts.5
+++ b/docs/manpages/lmhosts.5
@@ -1,4 +1,4 @@
-.TH LMHOSTS 5 "18 May 1999" "lmhosts 2.0.4"
+.TH LMHOSTS 5 "20 May 1999" "lmhosts 2.0.4b"
 .PP 
 .SH "NAME" 
 lmhosts \- The Samba NetBIOS hosts file
