--- a/docs/manpages/nmblookup.1
+++ b/docs/manpages/nmblookup.1
@@ -1,4 +1,4 @@
-.TH NMBLOOKUP 1 "18 May 1999" "nmblookup 2.0.4"
+.TH NMBLOOKUP 1 "20 May 1999" "nmblookup 2.0.4b"
 .PP 
 .SH "NAME" 
 nmblookup \- NetBIOS over TCP/IP client used to lookup NetBIOS names
