--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -1,4 +1,4 @@
-.TH SMB.CONF 5 "18 May 1999" "smb.conf 2.0.4"
+.TH SMB.CONF 5 "20 May 1999" "smb.conf 2.0.4b"
 .PP 
 .SH "NAME" 
 smb\&.conf \- The configuration file for the Samba suite
