--- a/docs/manpages/smbclient.1
+++ b/docs/manpages/smbclient.1
@@ -1,4 +1,4 @@
-.TH SMBCLIENT 1 "18 May 1999" "smbclient 2.0.4"
+.TH SMBCLIENT 1 "20 May 1999" "smbclient 2.0.4b"
 .PP 
 .SH "NAME" 
 smbclient \- ftp-like client to access SMB/CIFS resources on servers
