--- a/docs/manpages/smbd.8
+++ b/docs/manpages/smbd.8
@@ -1,4 +1,4 @@
-.TH SMBD 8 "18 May 1999" "smbd 2.0.4"
+.TH SMBD 8 "20 May 1999" "smbd 2.0.4b"
 .PP 
 .SH "NAME" 
 smbd \- server to provide SMB/CIFS services to clients
