--- a/docs/manpages/smbmnt.8
+++ b/docs/manpages/smbmnt.8
@@ -1,4 +1,4 @@
-.TH SMBMNT 8 "18 May 1999" "smbmnt 2.0.4"
+.TH SMBMNT 8 "20 May 1999" "smbmnt 2.0.4b"
 .SH NAME
 smbmnt \- mount smb file system
 .SH SYNOPSIS
