--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -1,4 +1,4 @@
-.TH SMBMOUNT 8 "18 May 1999" "smbmount 2.0.4"
+.TH SMBMOUNT 8 "20 May 1999" "smbmount 2.0.4b"
 .SH NAME
 smbmount \- mount smb file system
 .SH SYNOPSIS
