--- a/docs/manpages/smbpasswd.5
+++ b/docs/manpages/smbpasswd.5
@@ -1,4 +1,4 @@
-.TH SMBPASSWD 5 "18 May 1999" "smbpasswd 2.0.4"
+.TH SMBPASSWD 5 "20 May 1999" "smbpasswd 2.0.4b"
 .PP 
 .SH "NAME" 
 smbpasswd \- The Samba encrypted password file
