--- a/docs/manpages/testprns.1
+++ b/docs/manpages/testprns.1
@@ -1,4 +1,4 @@
-.TH TESTPRNS 1 "18 May 1999" "testprns 2.0.4"
+.TH TESTPRNS 1 "20 May 1999" "testprns 2.0.4b"
 .PP 
 .SH "NAME" 
 testprns \- check printer name for validity with smbd 
